--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,9 +33,10 @@ layout: default
         <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
       </div>
-      <div class="grid-item rect_image"><img src="/assets/img/Beamomega05.png"></div>
+      <!--<div class="grid-item rect_image"><img src="/assets/img/Beamomega05.png"></div>-->
       <div class="grid-item rect_image"><img src="/assets/img/non-Fourier.png"></div>
     </div>
+
 
     <p class="mt-2 fst-italic"><a class="two" href="/research">read full research topics</a></p>
   </div>
