--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,6 @@ layout: default
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/HeatConduction.jpg"></div>
-      <div class="grid-item"></div>
     </div>
     <div class="grid-container">
       <div class="grid-item rect_image"><img src="/assets/img/HypersonicMesh.png"></div>
@@ -35,6 +34,12 @@ layout: default
       </div>
       <!--<div class="grid-item rect_image"><img src="/assets/img/Beamomega05.png"></div>-->
       <div class="grid-item rect_image"><img src="/assets/img/non-Fourier.png"></div>
+    </div>
+    <div class="grid-container">
+      <div class="grid-item rect_image"><img src="/assets/img/capsule.png"></div>
+      <div class="grid-item">
+        <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
+      </div>
     </div>
 
 
