--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,11 @@ layout: default
       <div class="grid-item rect_image"><img src="/assets/img/non-Fourier.png"></div>
     </div>
     <div class="grid-container">
-      <div class="grid-item rect_image"><img src="/assets/img/capsule.png"></div>
+      <div class="grid-item rect_image"><img src="/assets/img/Fig1a.png"></div>
+      <div class="grid-item rect_image"><img src="/assets/img/Fig1b.png"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
-        We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heay shield.
+        We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
       </div>
     </div>
 
