--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -41,7 +41,8 @@ a.two {
 }
 
 .rect_image {
-  height: 250px;
+  width: 220px;
+  height: 220px;
   border-radius: 0%;
   overflow: hidden;
   background-color: $backgroundColor;
