--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-5 border-bottom">
   <div>
-    <a href="{{ site.github.url }}/" class="one d-flex align-items-center text-decoration-none">
+    <a href="{{ site.github.url }}/" class="three d-flex align-items-center text-decoration-none">
       <span class="fs-4 fw-bold">{{ site.title }}</span>
     </a>
-    <a href="{{ site.github.url }}/" class="one d-flex align-items-center text-decoration-none">
+    <a href="{{ site.github.url }}/" class="four d-flex align-items-center text-decoration-none">
       <span>{{ site.description }}</span>
     </a>
   </div>
