--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,8 @@ $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $linkColor: #212529;
 $linkColorbody: #4472C4;
+$linkColorHeader: #0066CC;
+$linkColorHeadersub: #99CCFF;
 
 body {
   background: $backgroundColor;
@@ -17,6 +19,16 @@ a.one {
 
 a.two {
   color: $linkColorbody;
+  text-decoration : none;
+}
+
+a.three {
+  color: $linkColorHeader;
+  text-decoration : none;
+}
+
+a.four {
+  color: $linkColorHeadersub;
   text-decoration : none;
 }
 
