--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,7 +3,7 @@ $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $linkColor: #212529;
 $linkColorbody: #4472C4;
-$linkColorHeader: #0066CC;
+$linkColorHeader: #004F71;
 $linkColorHeadersub: #99CCFF;
 
 body {
