--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,8 +3,8 @@ $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $linkColor: #212529;
 $linkColorbody: #4472C4;
-$linkColorHeader: #004F71;
-$linkColorHeadersub: #99CCFF;
+$linkColorHeader: #1f78b4;
+$linkColorHeadersub: #a6cee3;
 
 body {
   background: $backgroundColor;
