--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,8 +3,8 @@ $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $linkColor: #212529;
 $linkColorbody: #4472C4;
-$linkColorHeader: #1f78b4;
-$linkColorHeadersub: #a6cee3;
+$linkColorHeader: #7b4173;
+$linkColorHeadersub: #a55194;
 
 body {
   background: $backgroundColor;
