--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: default
     </div>
 
 
-    <p class="mt-2 fst-italic"><a class="two" href="/research">read full research topics</a></p>
+    <p class="mt-2 fst-italic"><a class="four" href="/research">read full research topics</a></p>
   </div>
 </div>
 
