--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,38 +12,38 @@ body {
   font-family: $bodyFont;
 }
 
-a.one:link {
+a.one:link, a.one:visited {
   color: $linkColor;
   text-decoration : none;
 }
-a.one:hover {
+a.one:hover, a.one:active {
   color: $linkColor;
   text-decoration : underline;
 }
 
-a.two:link {
+a.two:link, a.two:visited {
   color: $linkColorbody;
   text-decoration : none;
 }
-a.two:hover {
+a.two:hover, a.two:active {
   color: $linkColorbody;
   text-decoration : underline;
 }
 
-a.three:link {
+a.three:link, a.three:visited {
   color: $linkColorHeader;
   text-decoration : none;
 }
-a.three:hover {
+a.three:hover, a.three:active {
   color: $linkColorHeader;
   text-decoration : underline;
 }
 
-a.four:link {
+a.four:link, a.four:visited {
   color: $linkColorHeadersub;
   text-decoration : none;
 }
-a.four:hover {
+a.four:hover, a.four:active {
   color: $linkColorHeadersub;
   text-decoration : underline;
 }
