--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,6 +97,7 @@ a.four:hover, a.four:active {
   display: grid;
   grid-template-columns: auto auto auto;
   column-gap: 10px;
+  border-top: 1px solid $linkColor;
 }
 .grid-item{
   text-align: left
