--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,11 +97,11 @@ a.four:hover, a.four:active {
   display: grid;
   grid-template-columns: auto auto auto;
   column-gap: 10px;
-  border-top: 1px solid $linkColor;
   border-bottom: 1px solid $linkColor;
 }
 .grid-item{
-  text-align: left
+  text-align: left;
+  padding-bottom: 5px;
 }
 
 li {margin-bottom: 10px}
