--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -101,7 +101,8 @@ a.four:hover, a.four:active {
 }
 .grid-item{
   text-align: left;
-  padding-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 1px;
 }
 
 li {margin-bottom: 10px}
