--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,8 +3,10 @@ $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $linkColor: #212529;
 $linkColorbody: #4472C4;
-$linkColorHeader: #7b4173;
-$linkColorHeadersub: #a55194;
+$linkColorHeader: #313695;
+$linkColorHeadersub: #4a7bb7;
+$purple: #7b4173;
+$lightpurple: #a55194;
 
 body {
   background: $backgroundColor;
@@ -97,7 +99,6 @@ a.four:hover, a.four:active {
   display: grid;
   grid-template-columns: auto auto auto;
   column-gap: 10px;
-  border-bottom: 1px solid $linkColor;
 }
 .grid-item{
   text-align: left;
