--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,8 +97,7 @@ a.four:hover, a.four:active {
 
 .grid-container{
   display: grid;
-  grid-template-columns: auto auto auto;
-  column-gap: 10px;
+  grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
 }
 .grid-item{
   text-align: left;
