--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,7 @@
   <div>
     <a href="{{ site.github.url }}/" class="three d-flex align-items-center text-decoration-none">
       <span class="fs-4 fw-bold">{{ site.title }}</span>
-    </a>
-    <a href="{{ site.github.url }}/" class="four d-flex align-items-center text-decoration-none">
+    </a><a href="{{ site.github.url }}/" class="four d-flex align-items-center text-decoration-none">
       <span>{{ site.description }}</span>
     </a>
   </div>
