--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,8 @@ layout: default
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </div>
-      <div class="grid-item rect_image"><img src="/assets/img/HypersonicMesh.png"></div>
-      <div class="grid-item rect_image"><img src="/assets/img/HypersonicT.png"></div>
+      <!--<div class="grid-item rect_image"><img src="/assets/img/HypersonicMesh.png"></div>
+      <div class="grid-item rect_image"><img src="/assets/img/HypersonicT.png"></div>-->
     </div>
     <div class="grid-container">
       <div class="grid-item">
@@ -41,7 +41,7 @@ layout: default
         We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/Fig1a.png"></div>
-      <div class="grid-item rect_image"><img src="/assets/img/Fig1b.png"></div>
+      <!--<div class="grid-item rect_image"><img src="/assets/img/Fig1b.png"></div>-->
     </div>
 
 
