--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,11 @@
       <span>{{ site.description }}</span>
     </a>
   </div>
-  <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+  <div>
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
     {% for item in site.data.settings.menu%}
       <a class="one me-3 py-2 text-decoration-none" href="{{ site.github.url }}{{ item.url }}">{{ item.name }}</a>
     {% endfor %}
-  </nav>
+    </nav>
+  </div>
 </header>
