--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
         <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </div>
-      <div class="grid-item rect_image"><img src="/assets/img/HeatConduction.jpg"></div>
+      <div class="grid-item rect_image"><img src="/assets/img/HeatConduction.png"></div>
 
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
