--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -98,6 +98,7 @@ a.four:hover, a.four:active {
 .grid-container{
   display: grid;
   grid-template-columns: repeat( autofit, 1fr );
+  border: 1px;
 }
 .grid-item{
   text-align: left;
