--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -100,7 +100,7 @@ a.four:hover, a.four:active {
   grid-template-columns: repeat( 2, 1fr );
 }
 .grid-item{
-  text-align: left;
+  text-align: justify;
   padding: 10px;
   justify-self: center;
 }
