--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,7 +97,7 @@ a.four:hover, a.four:active {
 
 .grid-container{
   display: grid;
-  grid-template-columns: repeat( 2, 1fr );
+  grid-template-columns: repeat( 2, minmax(250px, 1fr) );
 }
 .grid-item{
   text-align: justify;
