--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/non-Fourier.png"></div>
-      <div class="grid-item">
+      <div class="grid-item justify">
         <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
         We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
       </div>
