--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -99,11 +99,17 @@ a.four:hover, a.four:active {
   display: grid;
   grid-template-columns: repeat( 2, minmax(250px, 1fr) );
 }
-.grid-item{
+.grid-item-a{
   text-align: justify;
   padding: 1px;
-  justify-self: center;
+  justify-self: start;
 }
+.grid-item-b{
+  text-align: justify;
+  padding: 1px;
+  justify-self: end;
+}
+
 
 li {margin-bottom: 10px}
 
