--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,16 +18,22 @@ layout: default
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/HeatConduction.png"></div>
+    </div>
+    <div class="grid-container">
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/Square_G_F.png"></div>
+    </div>
+    <div class="grid-container">
       <div class="grid-item">
         <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/non-Fourier.png"></div>
+    </div>
+    <div class="grid-container">
       <div class="grid-item">
         <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
         We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
