--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,7 +97,8 @@ a.four:hover, a.four:active {
 
 .grid-container{
   display: grid;
-  grid-template-columns: repeat( autofit, minmax(250px, 1fr) );
+  grid-template-columns: repeat( 2, minmax(250px, 1fr) );
+  border-bottom: 1px;
 }
 .grid-item{
   text-align: left;
