--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-5 border-bottom">
+<header class="d-flex flex-column flex-md-row align-items-left pb-3 mb-5 border-bottom">
   <div>
-    <a href="/" class="three d-flex align-items-center text-decoration-none">
+    <a href="/" class="three d-flex align-items-left text-decoration-none">
       <span class="fs-4 fw-bold">{{ site.title }}</span>
-    </a><a href="/" class="four d-flex align-items-center text-decoration-none">
+    </a><a href="/" class="four d-flex align-items-left text-decoration-none">
       <span>{{ site.description }}</span>
     </a>
   </div>
