--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -77,8 +77,8 @@ a.four:hover, a.four:active {
   overflow: hidden;
   background-color: $backgroundColor;
   /* commented for demo */
-  vertical-align: middle;
-  margin-left: 1px;
+  flat: right;
+  margin-left: 10px;
   margin-top: 1px;
   margin-bottom: 1px;
 
