--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -77,7 +77,7 @@ a.four:hover, a.four:active {
   overflow: hidden;
   background-color: $backgroundColor;
   /* commented for demo */
-  flat: right;
+  float: right;
   margin-left: 10px;
   margin-top: 1px;
   margin-bottom: 1px;
