--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,10 +12,12 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
-    <div class="col-md-12">
+    <div class="col-md-12 border-bottom">
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
-      <p><img class="rect_image" src="/assets/img/HeatConduction.png">
-      We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.</p>
+      <p>
+      <img class="rect_image" src="/assets/img/HeatConduction.png">
+      We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
+      </p>
     </div>
     <div class="grid-container">
       <div class="grid-item">
