--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,16 +15,16 @@ layout: default
     <div class="col-md-12 border-bottom">
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
       <p>
-      <img class="rect_image" src="/assets/img/HeatConduction.png">
-      We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
+        <img class="rect_image" src="/assets/img/HeatConduction.png">
+        We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </p>
     </div>
-    <div class="grid-container">
-      <div class="grid-item">
-        <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
+    <div class="col-md-12 border-bottom">
+      <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
+      <p>
+        <img class="rect_image" src="/assets/img/Square_G_F.png">
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
-      </div>
-      <div class="grid-item rect_image"><img src="/assets/img/Square_G_F.png"></div>
+      </p>
     </div>
     <div class="grid-container">
       <div class="grid-item">
