--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,19 +26,19 @@ layout: default
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </p>
     </div>
-    <div class="grid-container">
-      <div class="grid-item">
-        <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
+    <div class="col-md-12 border-bottom">
+      <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
+      <p>
+        <img class="rect_image" src="/assets/img/non-Fourier.png">
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
-      </div>
-      <div class="grid-item rect_image"><img src="/assets/img/non-Fourier.png"></div>
+      </p>
     </div>
-    <div class="grid-container">
-      <div class="grid-item">
-        <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
+    <div class="col-md-12 border-bottom">
+      <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
+      <p>
+        <img class="rect_image" src="/assets/img/Fig1a.png">
         We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
-      </div>
-      <div class="grid-item rect_image"><img src="/assets/img/Fig1a.png"></div>
+      </p>
     </div>
 
 
