--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -88,8 +88,7 @@ a.four:hover, a.four:active {
   vertical-align:middle;*/
 }
 .rect_image img{
-  width: auto;
-  height: auto;
+  width:100%;
 } 
 
 .justify {
