--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,8 +72,8 @@ a.four:hover, a.four:active {
 
 .rect_image {
   display: block;
-  max-width: 220px;
-  max-height: 220px;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 0%;
   overflow: hidden;
   background-color: $backgroundColor;
