--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -74,6 +74,7 @@ a.four:hover, a.four:active {
   display: block;
   max-width: 100%;
   max-height: 100%;
+  object-fit: contain;
   border-radius: 0%;
   overflow: hidden;
   background-color: $backgroundColor;
