--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,8 +72,8 @@ a.four:hover, a.four:active {
 
 .rect_image {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  width: 220px;
+  height: 150px;
   object-fit: contain;
   border-radius: 0%;
   overflow: hidden;
