--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,28 +12,28 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
-    <div class="col-md-12 border-bottom">
+    <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
       <p>
         <img class="rect_image" src="/assets/img/HeatConduction.png">
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </p>
     </div>
-    <div class="col-md-12 border-bottom">
+    <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
       <p>
         <img class="rect_image" src="/assets/img/Square_G_F.png">
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </p>
     </div>
-    <div class="col-md-12 border-bottom">
+    <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
       <p>
         <img class="rect_image" src="/assets/img/non-Fourier.png">
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
       </p>
     </div>
-    <div class="col-md-12 border-bottom">
+    <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
       <p>
         <img class="rect_image" src="/assets/img/Fig1a.png">
