--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -88,9 +88,9 @@ a.four:hover, a.four:active {
   display:inline-block;
   vertical-align:middle;*/
 }
-.rect_image img{
+/*.rect_image img{
   width:100%;
-} 
+} */
 
 .justify {
   text-align: justify;
