--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
-    <div class="col-md-12 border-bottom mt-3">
+    <div class="col-md-12 border-bottom mt-3 box">
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
       <p>
         <img class="rect_image" src="/assets/img/HeatConduction.png">
