--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <span>{{ site.description }}</span>
     </a>
   </div>
-  <nav class="d-flex mt-2 mt-md-0 ms-md-auto">
+  <nav class="d-flex mt-2 mt-md-0 ms-md-auto scroll">
     {% for item in site.data.settings.menu%}
       <a class="one me-3 py-2 text-decoration-none" href="{{ site.github.url }}{{ item.url }}">{{ item.name }}</a>
     {% endfor %}
