--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -110,3 +110,13 @@ li {margin-bottom: 10px}
   min-height: 200px;
 }
 
+.scroll {
+  white-space: nowrap; /* [1] */
+  overflow-x: auto; /* [2] */
+  -webkit-overflow-scrolling: touch; /* [3] */
+  -ms-overflow-style: -ms-autohiding-scrollbar; /* [4] */ }
+
+/* [5] */
+.scroll::-webkit-scrollbar {
+  display: none; }
+
