--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -113,10 +113,10 @@ li {margin-bottom: 10px}
 .scroll {
   white-space: nowrap; /* [1] */
   overflow-x: auto; /* [2] */
-  -webkit-overflow-scrolling: touch; /* [3] */
-  -ms-overflow-style: -ms-autohiding-scrollbar; /* [4] */ }
+  -webkit-overflow-scrolling: touch; [3] */
+  /* -ms-overflow-style: -ms-autohiding-scrollbar; [4] */ }
 
-/* [5] */
+/* [5] 
 .scroll::-webkit-scrollbar {
-  display: none; }
+  display: none; }*/
 
