--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -112,7 +112,7 @@ li {margin-bottom: 10px}
 
 .scroll {
   white-space: nowrap; /* [1] */
-  overflow-x: auto; /* [2] */
+  overflow-y: auto; /* [2] */
   -webkit-overflow-scrolling: touch; [3] */
   /* -ms-overflow-style: -ms-autohiding-scrollbar; [4] */ }
 
