--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -71,8 +71,8 @@ a.four:hover, a.four:active {
 }
 
 .rect_image {
-  width: 4em;
-  height: 3em;
+  width: 220px;
+  height: 180px;
   object-fit: contain;
   border-radius: 0%;
   background-color: $backgroundColor;
@@ -95,12 +95,12 @@ a.four:hover, a.four:active {
 
 .grid-container{
   display: grid;
-  grid-template-columns: repeat( 2, minmax(250px, 1fr) );
+  grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
 }
 .grid-item{
   text-align: left;
   padding: 10px;
-  justify-self: end;
+  justify-self: start;
 }
 
 
