--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -78,7 +78,7 @@ a.four:hover, a.four:active {
   background-color: $backgroundColor;
   /* commented for demo */
   float: right;
-  margin: 0.1em;
+  margin: 10px;
 
   /*for demo
   display:inline-block;
