--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,11 @@ layout: default
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
         <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
-        <p><img class="rect_image" src="/assets/img/HeatConduction.png">
+        <p>
           We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
         </p>
       </div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
     </div>
     <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
