--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,12 +21,14 @@ layout: default
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
     </div>
-    <div class="col-md-12 border-bottom mt-3">
-      <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
-      <p>
-        <img class="rect_image" src="/assets/img/Square_G_F.png">
+    <div class="grid-container border-bottom mt-3">
+      <div class="grid-item">
+        <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
+        <p>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
-      </p>
+        </p>
+      </div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Square_G_F.png"></div>
     </div>
     <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
