--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,12 +30,14 @@ layout: default
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/Square_G_F.png"></div>
     </div>
-    <div class="col-md-12 border-bottom mt-3">
-      <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
-      <p>
-        <img class="rect_image" src="/assets/img/non-Fourier.png">
+    <div class="grid-container border-bottom mt-3">
+      <div class="grid-item">
+        <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
+        <p>
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
-      </p>
+        </p>
+      </div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/non-Fourier.png"></div>
     </div>
     <div class="col-md-12 border-bottom mt-3">
       <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
