--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,14 +39,15 @@ layout: default
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/non-Fourier.png"></div>
     </div>
-    <div class="col-md-12 border-bottom mt-3">
-      <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
-      <p>
-        <img class="rect_image" src="/assets/img/Fig1a.png">
+    <div class="grid-container border-bottom mt-3">
+      <div class="grid-item">
+        <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
+        <p>
         We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
-      </p>
+        </p>
+      </div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Fig1a.png"></div>
     </div>
-
 
     <p class="mt-2 fst-italic"><a class="four" href="/research">read full research topics</a></p>
   </div>
