--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Our Vision</h3>
-      <p class="justify">{{ content }}</p>
+    {{ content }}
   </div>
 </div>
 
@@ -15,7 +15,7 @@ layout: default
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
         <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
-        <p class="justify">
+        <p>
           We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
         </p>
       </div>
@@ -24,7 +24,7 @@ layout: default
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
-        <p class="justify">
+        <p>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
         </p>
       </div>
@@ -33,7 +33,7 @@ layout: default
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
         <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
-        <p class="justify">
+        <p>
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
         </p>
       </div>
@@ -42,7 +42,7 @@ layout: default
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
         <h6 class="fw-bold">Nonequilibirum thermo-chemical ralaxation after shock</h6>
-        <p class="justify">
+        <p>
         We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
         </p>
       </div>
