--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
-        <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
+        <h6 class="fw-bold">Discontinuous Galerkin method</h6>
         <p>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
         </p>
