--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Multiscale computation</h6>
         <p>
-          We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
+          We put forward a general synthetic iterative scheme (GSIS) for solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
@@ -25,7 +25,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method</h6>
         <p>
-        We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
+        We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/Square_G_F.png"></div>
