--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method</h6>
         <p>
-        We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
+        We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/Square_G_F.png"></div>
