--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Multiscale computation</h6>
         <p>
-          We put forward a general synthetic iterative scheme (GSIS) for solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
+          We put forward a general synthetic iterative scheme (GSIS) for solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has the merits of fast convergence and asymptotic preserving, consequently reducing computational resource consumption by several orders of magnitude.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
@@ -25,7 +25,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method</h6>
         <p>
-        We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
+        We develop optimal solution strategies for the high-order discontinuous Galerkin methods adopted in the GSIS to make the simulation tool robust and economical for practical engineering-design simulations.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/Square_G_F.png"></div>
@@ -34,7 +34,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Physics of transport phenomena</h6>
         <p>
-        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
+        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/non-Fourier.png"></div>
@@ -43,7 +43,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Thermo-chemical ralaxation</h6>
         <p>
-        We develop sophisticated numerical methods to understand the nonequilibirum thermo-chemical relaxation that dictate the flow dynamics aournd re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
+        We develop sophisticated numerical methods to understand the nonequilibrium thermo-chemical relaxation that dictates the flow dynamics around re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/Fig1a.png"></div>
