--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@ layout: default
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
-        <h6 class="fw-bold">Thermo-chemical ralaxation</h6>
+        <h6 class="fw-bold">Thermo-chemical relaxation</h6>
         <p>
         We develop sophisticated numerical methods to understand the nonequilibrium thermo-chemical relaxation that dictates the flow dynamics around re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
         </p>
