--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods adopted in the GSIS to make the simulation tool robust and economical for practical engineering-design simulations.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/Square_G_F.png"></div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Circle_G_F.png"></div>
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
