--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Physics of transport phenomena</h6>
         <p>
-        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
+        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier solid heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/non-Fourier.png"></div>
