--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@ layout: default
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier solid heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/non-Fourier.png"></div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Beam_F.png"></div>
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item">
