--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: default
         We develop sophisticated numerical methods to understand the nonequilibrium thermo-chemical relaxation that dictates the flow dynamics around re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/Fig1a.png"></div>
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Capsule.png"></div>
     </div>
 
     <p class="mt-2 fst-italic"><a class="four" href="/research">read full research topics</a></p>
