--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
       <div class="grid-item">
         <h6 class="fw-bold">Multiscale computation</h6>
         <p>
-          We put forward a general synthetic iterative scheme (GSIS) for solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has the merits of fast convergence and asymptotic preserving, consequently reducing computational resource consumption by several orders of magnitude.
+          We put forward a general synthetic iterative scheme (GSIS) for solving kinetic equations and simulating multiscale gas/phonon transport reliably. The scheme has the merits of fast convergence and asymptotic preserving, consequently reducing computational resource consumption by several orders of magnitude.
         </p>
       </div>
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
