--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -90,7 +90,7 @@ a.four:hover, a.four:active {
 
 .justify {
   text-align: justify;
-  text-justify: inter-character;
+  text-justify: inter-word;
 }
 
 .grid-container{
