--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Our Vision</h3>
-    {{ content }}
+    <p class="justify">{{ content }}</p>
   </div>
 </div>
 
