--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,17 +3,19 @@
     <h3 class="fw-bold text-xl-center pb-3 mb-5">Contact</h3>
     {% for contact in site.data.settings.contacts %}
     <div class="row g-5 mb-5">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <h4>{{ contact.name }}</h4>
-        <p>{{ contact.title }} | {{ contact.department }}</p>
-        <p>{{ contact.institution }} | {{ contact.institution_address }}</p>
-        <p>Phone: {{ contact.phone }}</p>
-        <p>Email: {{ contact.email }}</p>
-        <p>Office: {{ contact.office }}</p>
+        <p class="mb-0">{{ contact.title }}</p>
+        <p class="mb-0">{{ contact.department }}</p>
+        <p class="mb-0">{{ contact.institution }}</p>
+        <p class="mb-0">{{ contact.institution_address }}</p>
+        <p class="mb-0">Phone: {{ contact.phone }}</p>
+        <p class="mb-0">Email: {{ contact.email }}</p>
+        <p class="mb-0">Office: {{ contact.office }}</p>
       </div>
-      <div class="col-md-6">
+      <!--<div class="col-md-6">
         <img src="{{ site.github.url }}/{{ contact.image }}" alt="Contact" width="100%">
-      </div>
+      </div>-->
     </div>
     {% endfor %}
   </div>
