--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
   <div>
     <h3 class="fw-bold text-xl-center pb-3 mb-5">Contact</h3>
     {% for contact in site.data.settings.contacts %}
-    <div class="row g-5 mb-5">
+    <div class="row mb-5">
       <div class="col-md-12">
         <h4>{{ contact.name }}</h4>
         <p class="mb-0">{{ contact.title }}</p>
